# betagouv-datasette

./: Makefile  README.md  pyproject.toml
app/: data.sqlite  metadata.yml
scripts/: refresh_data.py
